--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,26 @@ a {
 * {
   box-sizing: border-box;
 }
+
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(
+    175deg,
+    hsl(43deg 100% 52%) 0%,
+    hsl(41deg 100% 49%) 11%,
+    hsl(37deg 100% 49%) 22%,
+    hsl(34deg 100% 48%) 33%,
+    hsl(31deg 100% 47%) 44%,
+    hsl(27deg 100% 46%) 56%,
+    hsl(23deg 100% 45%) 67%,
+    hsl(18deg 100% 44%) 78%,
+    hsl(12deg 100% 42%) 89%,
+    hsl(0deg 100% 41%) 100%
+    );
+    border-radius: 10px;
+}
