--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -1,8 +1,10 @@
 .Video{
-    width: 400px;
-    height: 300px;
-    margin: 0 10px;
-    padding-bottom: 10px;
+    min-width: 350px;
+    width: auto;
+    min-height: 300px;
+    height: 320px;
+    margin: 5px 10px;
+    overflow: hidden;
 }
 
 .miniature{
@@ -15,6 +17,7 @@
     justify-content: center;
 }
 .bottom{
+    width: auto;
     margin-top: 5px;
     margin-left: 4px;
     display: flex;
@@ -27,6 +30,7 @@
 }
 .right{
     margin-left: 3px;
+    width: 80%;
 }
 .right h3, .right p{
     margin: 0;
