--- a/styles/VideoContainer.module.css
+++ b/styles/VideoContainer.module.css
@@ -1,8 +1,9 @@
 .VideoContainer{
-    justify-content: center;
-    align-items: center;
-    margin: 5% 5%;
+
+    margin-top: 65px;
     display: flex;
+    justify-content: center;
+    align-items: center; 
     flex-wrap: wrap;
-    padding: 1%;
+    padding: 0%;
 }
