--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -1,6 +1,6 @@
 .Video{
     min-width: 350px;
-    width: auto;
+    width: 400px;
     min-height: 300px;
     height: 320px;
     margin: 5px 10px;
