--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -2,3 +2,10 @@
     margin-top: 65px;
     height: 100vh;
 }
+
+.loading{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
