--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -5,7 +5,6 @@
 
 .loading{
     position: absolute;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%);
 }
