--- a/styles/PostVideo.module.css
+++ b/styles/PostVideo.module.css
@@ -31,14 +31,58 @@
     align-items: center;
     justify-content: center;
     font-family: 'Roboto',-apple-system, BlinkMacSystemFont, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 600;
     cursor: pointer;
     transition-duration: .1s;
+    padding: 40px 0px;
+    overflow: hidden;
+    text-align: center;
 }
 .postContainer label:hover{
     transition-duration: .3s;
     background-color: rgba(0, 0, 0, 0.400);
     border: 4px solid rgba(0, 0, 0, 0.000);
     color: white;
+}
+
+.postContainer button{
+    margin-top: 20px;
+    outline: none;
+    border: none;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.200);
+    border-radius: 10px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+.postContainer button img{
+    margin: 0;
+    height: 32px;
+}
+.progressBar{
+    margin-top: 30px;
+}
+
+.inprogress{
+    background-image: linear-gradient(to right, #FFBA08, #D00000);
+    height: 30px;
+    width: 0px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-family: 'Roboto',-apple-system, BlinkMacSystemFont, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+}
+
+.inprogress::before{
+    content: '';
+    position: absolute;
+    height: 30px;
+    width: 300px;
+    border-radius: 12px;
+    border: 2px solid rgba(0, 0, 0, 0.400);
+
 }
