--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -67,7 +67,9 @@
     display: flex;
     align-items: center;
 }
-
+.loginButton{
+    cursor: pointer;
+}
 .addButton{
     cursor: pointer;
     margin-left: 10%;
