--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: center;
     border-bottom: 2px solid #00000023;
-    box-shadow: 2px 2px 10px #00000025;
+    box-shadow: 2px 2px 10px #0000005c;
     position: fixed;
     top: 0;
 }
@@ -25,7 +25,7 @@
     align-items: center;
     background-image: linear-gradient(
     175deg,
-    hsl(43deg 100% 52%) 0%,
+    hsl(43, 100%, 52%) 0%,
     hsl(41deg 100% 49%) 11%,
     hsl(37deg 100% 49%) 22%,
     hsl(34deg 100% 48%) 33%,
@@ -34,7 +34,7 @@
     hsl(23deg 100% 45%) 67%,
     hsl(18deg 100% 44%) 78%,
     hsl(12deg 100% 42%) 89%,
-    hsl(0deg 100% 41%) 100%
+    hsl(0, 100%, 41%) 100%
     );
     padding: 3px;
     border-radius: 10px;
