--- a/styles/Video.module.css
+++ b/styles/Video.module.css
@@ -7,7 +7,7 @@
     margin: 5px 10px;
     overflow: hidden;
     border-radius: 5px;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .miniature{
