--- a/styles/ViewContent.module.css
+++ b/styles/ViewContent.module.css
@@ -1,9 +1,8 @@
 .content{
-    padding: 0 4%;
     margin-top: 80px;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .uniqueVideo{
