--- a/styles/ConnectedUser.module.css
+++ b/styles/ConnectedUser.module.css
@@ -18,10 +18,12 @@
     border-radius: 36px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     overflow: hidden;
+    margin-bottom: 30px;
 
 }
 .imgContainer img{
     height: 300px;
+    
 }
 .infoInboxContainer{
     margin-left: 10%;
@@ -29,6 +31,12 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+}
+.userInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .userInfo form{
     
