--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,15 @@ body {
   height: 100%;
 }
 
+:root {
+  --swiper-theme-color:hsl(31deg 100% 47%) !important;
+}
+
+.swiper-pagination-bullet{
+  width: 12px !important;
+  height: 12px !important;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -42,6 +51,7 @@ a {
     );
     border-radius: 10px;
 }
+
 
 /* cyrillic-ext */
 @font-face {
