--- a/styles/PostVideo.module.css
+++ b/styles/PostVideo.module.css
@@ -1,3 +1,10 @@
+.PostVideoContainer{
+    margin-top: 65px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .PostVideo{
     min-height: 100vh;
     height: 100vh;
