--- a/styles/Categories.module.css
+++ b/styles/Categories.module.css
@@ -3,14 +3,30 @@
 }
 .Categories h3.title{
     text-decoration: underline;
-    text-align: center;
     font-weight: 700;
     font-size: clamp(20px, 2vw, 26px);
     align-items: center;
     justify-content: center;
 }
 .videoContainer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(4,minmax(0,1fr));
+}
+
+@media screen and (max-width: 1700px) {
+    .videoContainer{
+        grid-template-columns: repeat(3,minmax(0,1fr));
+    }
+}
+
+@media screen and (max-width: 1240px) {
+    .videoContainer{
+        grid-template-columns: repeat(2,minmax(0,1fr));
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .videoContainer{
+        grid-template-columns: repeat(1,minmax(0,1fr));
+    }
 }
