--- a/styles/ViewContent.module.css
+++ b/styles/ViewContent.module.css
@@ -1,10 +1,153 @@
+.videoInfo{
+    width: clamp(414px, 70vw, 1300px);
+}
+
 .content{
     margin-top: 80px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    
 }
 
 .uniqueVideo{
     padding: 2% 0;
+}
+
+.videoDesc{
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    background-color: #FBFBFB;
+    padding-bottom: 10px;
+}
+
+.left{
+    width: 47%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.left h3{
+    font-size: clamp(22px, 2.8vw, 26px);
+    font-family: 'Roboto';
+    padding: 0;
+    margin: 0;
+
+}
+.left p{
+    margin: 0;
+    padding: 0;
+    letter-spacing: 1px;
+    font-size: clamp(16px, 1.8vw, 22px);
+}
+
+.left .profil{
+    cursor: pointer;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+}
+.left .profil img{
+    height: 52px;
+    border-radius: 50px
+}
+.left .profil p{
+    letter-spacing: 0;
+    font-size: 16px;
+    margin-left: 5px;
+    font-weight: 600;
+}
+
+.trait{
+    height: 110px;
+    width: 3px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.10);
+}
+.right{
+    width: 47%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.likeContainer{
+    display: flex;
+    margin: 0 20px;
+    font-size: 20px;
+    align-items: center;
+    font-weight: 600;
+}
+
+.likeContainer button{
+    background: none;
+    outline: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+}
+
+.shareContainer{
+    margin: 0 20px;
+}
+.shareContainer button{
+    cursor: pointer;
+    background: none;
+    outline: none;
+    border: none;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+}
+.shareContainer img, .likeContainer img{
+    margin-right: 5px;
+}
+
+.longTrait{
+    width: 100%;
+    height: 2px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.103);
+}
+
+
+@media screen and (max-width: 1100px) {
+    .videoInfo{
+        width: 100%;
+    }
+    .left{
+        padding: 0 2%;
+    }
+    
+}
+
+@media screen and (max-width: 590px) {
+    .content{
+        display: block;
+    }
+
+    .videoDesc{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .left{
+        width: 100%;
+        padding: 0 2%;
+    }
+    .trait{
+        display: none;
+    }
+    .right{
+        width: 100%;
+    }
+    .leftContainer{
+        width: 100%;
+    }
 }
