--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,6 +110,26 @@ a {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+  font-family: 'GilroyLight';
+  font-style: normal;
+  src: url('/font/gilroy/Gilroy-Light.woff') format('woff');
+}
+@font-face {
+  font-family: 'GilroyBold';
+  font-style: normal;
+  src: url('/font/gilroy/Gilroy-Bold.woff') format('woff');
+}
+@font-face {
+  font-family: 'GilroyMedium';
+  font-style: normal;
+  src: url('/font/gilroy/Gilroy-Medium.woff') format('woff');
+}
+@font-face {
+  font-family: 'GilroySemiBold';
+  font-style: normal;
+  src: url('/font/gilroy/Gilroy-SemiBold.woff') format('woff');
+}
 
 @media screen and (max-width: 1100px){
   #__next{
