--- a/styles/CompleteDescVideo.module.css
+++ b/styles/CompleteDescVideo.module.css
@@ -1,3 +1,74 @@
 .completeVideoContainer{
-    
+    margin-top: clamp(70px, 10%, 150px);
+    width: auto;
+}
+.iframeContainer{
+    height: auto;
+    width: auto;
+    padding: 4px;
+    background-image: linear-gradient(
+        150deg,
+        hsl(43, 100%, 52%) 0%,
+        hsl(41deg 100% 49%) 11%,
+        hsl(37deg 100% 49%) 22%,
+        hsl(34deg 100% 48%) 33%,
+        hsl(31deg 100% 47%) 44%,
+        hsl(27deg 100% 46%) 56%,
+        hsl(23deg 100% 45%) 67%,
+        hsl(18deg 100% 44%) 78%,
+        hsl(12deg 100% 42%) 89%,
+        hsl(0, 100%, 41%) 100%
+        );
+    display: flex;
+    border-radius: 5px;
+}
+.completeVideoContainer iframe{
+    height: clamp(250px, calc(40vw/1.776), 731px);
+    width: clamp(414px, 40vw, 1300px);
+    margin: 0;
+    padding: 0;
+    border: 0;
+    border-radius: 5px;
+}
+
+
+
+
+.formBlock{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+
+.formContent{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.formContent input:nth-child(1){
+    margin-bottom: 5%;
+    width: 50%;
+    padding: 5px;
+    font-size: 18px;
+    border: 3px solid rgba(0, 0, 0, 0.26); 
+    border-radius: 5px;
+    font-weight: 500;
+    outline: none;
+    transition: .3s;
+}
+.formContent input:nth-child(1):hover, .formContent input:nth-child(1):focus{
+    border: 3px solid hsl(34deg 100% 48%) ;
+}
+
+.formContent textarea{
+    margin-bottom: 5%;
+    width: 100%;
+    height: 150px ;
+    padding: 5px;
+    font-size: 18px;
+    border: 3px solid rgba(0, 0, 0, 0.26); 
+    border-radius: 5px;
+    font-weight: 500;
 }
