--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -81,3 +81,17 @@
     border-radius: 40px;
     cursor: pointer;
 }
+
+.buttonSearch{
+    background: none;
+    outline: none;
+    border: none;
+}
+
+@media screen and (max-width:845px) {
+    .input{
+       width: 300px;
+    }
+    
+
+}
