--- a/styles/ConnectedVideo.module.css
+++ b/styles/ConnectedVideo.module.css
@@ -15,6 +15,17 @@
 .slide{
     overflow: hidden;
 }
+.slide button{
+    cursor: pointer;
+    position: absolute;
+    right:10px;
+    top: 10px;
+    padding: 0;
+    border: none;
+    outline: none;
+    background-color: rgba(255, 0, 0, 0.397);
+    border-radius: 10px;
+}
 
 .infoVideo{
     width: 100%;
