--- a/styles/CompleteDescVideo.module.css
+++ b/styles/CompleteDescVideo.module.css
@@ -58,11 +58,24 @@
     outline: none;
     transition: .3s;
 }
-.formContent input:nth-child(1):hover, .formContent input:nth-child(1):focus{
+.formContent input:nth-child(1):hover, .formContent input:nth-child(1):focus, .formContent textarea, .formContent textarea:focus, .pictureInput:hover, .pictureInput:focus{
     border: 3px solid hsl(34deg 100% 48%) ;
+}
+.pictureInput{
+    height: 40px;
+    width: 40%;
+    padding: 5px;
+    font-size: 16px;
+    border: 3px solid rgba(0, 0, 0, 0.26); 
+    border-radius: 5px;
+    font-weight: 500;
+    outline: none;
+    transition: .3s;
 }
 
 .formContent textarea{
+    transition: .3s;
+    outline: none;
     margin-bottom: 5%;
     width: 100%;
     height: 150px ;
@@ -71,4 +84,18 @@
     border: 3px solid rgba(0, 0, 0, 0.26); 
     border-radius: 5px;
     font-weight: 500;
+}
+
+.submit{
+    cursor: pointer;
+    margin: 10px 0;
+    font-size: 17px;
+    font-weight: 600;
+    outline: none;
+    background: none;
+    color: hsl(27deg 100% 46%);
+    border-radius: 10px;
+    padding: 5px 10px;
+    border: hsl(27deg 100% 46%) 2px solid;
+    transition: .3s;
 }
